--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "firebase": "^11.0.2",
     "lucide-react": "^0.456.0",
     "next": "15.0.2",
     "prisma": "^5.22.0",
