--- a/package.json
+++ b/package.json
@@ -9,17 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/firebase-adapter": "^2.7.4",
     "@prisma/client": "^5.22.0",
     "firebase": "^11.0.2",
+    "firebase-admin": "^12.7.0",
     "lucide-react": "^0.456.0",
     "next": "15.0.2",
+    "next-auth": "^4.24.10",
     "prisma": "^5.22.0",
-    "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
+    "@types/next-auth": "^3.13.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
